[project]
name="db_connect_test"
version="0.1.0"
description="A Python API for Vicinity Jobs Inc. API using Spark"
authors = [
    {name = "Geoff Kliza", email = "geoff@kliza.ca"}
]
maintainers = [
    {name = "Geoff Kliza", email = "geoff@kliza.ca"}
]
readme = "README.md"
requires-python = ">=3.9.0"
license = {file = "LICENSE.txt"}
dependencies=[
    "requests>=2.5.0,<3.0.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
repository = "https://github.com/GovAlta-EMU/vicinity_api"

[tool.pytest.ini_options]
testpaths = ["tests"]
